--- a/Boilerplate/Application/LaunchScreen.storyboard
+++ b/Boilerplate/Application/LaunchScreen.storyboard
@@ -6,8 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,18 +22,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGO.001" translatesAutoresizingMaskIntoConstraints="NO" id="68B-05-yav">
-                                <rect key="frame" x="16" y="203" width="343" height="261"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="68B-05-yav" secondAttribute="height" multiplier="343:261" id="AdB-zF-elr"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="68B-05-yav" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="YSg-pf-3FY"/>
-                            <constraint firstItem="68B-05-yav" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="ZiN-k4-qQ8"/>
-                            <constraint firstItem="68B-05-yav" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="iNz-e4-k9b"/>
-                            <constraint firstItem="68B-05-yav" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="v0r-6U-Da3"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="68B-05-yav" secondAttribute="bottom" id="1eb-bi-yMr"/>
+                            <constraint firstAttribute="trailing" secondItem="68B-05-yav" secondAttribute="trailing" id="D9J-1i-l9Y"/>
+                            <constraint firstItem="68B-05-yav" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="aGX-8b-Nwh"/>
+                            <constraint firstItem="68B-05-yav" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="oas-Xd-TY4"/>
                         </constraints>
                     </view>
                 </viewController>
